--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "description": "An Alfred workflow to easily search for emojis using keywords so you can copy and paste them into your favorite apps.",
   "repository": "janclarin/emoji-alfred-workflow",
+  "license": "MIT",
   "author": {
     "name": "Jan Clarin",
     "email": "hi@janclarin.com",
